# voxelcore

./: CMakeLists.txt  README.md  vcpkg.json
res/scripts/: stdlib.lua
src/: CMakeLists.txt
src/engine/: ServerMainloop.cpp
src/network/: Network.cpp
